--- a/views/home.erb
+++ b/views/home.erb
@@ -1,16 +1,12 @@
 <div class="row">
-  <div class="span5">
-    <div class="home">
-    <ul class="nav nav-tabs nav-stacked">
-      <li><a class = "users btn bt-info" href="/users">Users</a></li>
-      <li><a class = "products btn bt-info" href="/products">Products</a></li>
-    </ul>
-    </div>
-  </div>
-  <div class="span7">
+  <div class="home">
     <h1 class="store_name">Panda Outpost</h1>
-    <img class= "panda" src="https://lh4.googleusercontent.com/-foioFMdHQbw/UV54jVq2BQI/AAAAAAAAAO8/yBui8L14zKQ/s860/399618_406232742765079_434225307_n.jpg">      
+    <p></p>
+    <p></p>
+    <a class = "homeusers" href="/users">Users</a>
+    <a class = "homeproducts" href="/products">Products</a>
   </div>
+<div class="row">
+  <img class= "panda" src="https://lh4.googleusercontent.com/-foioFMdHQbw/UV54jVq2BQI/AAAAAAAAAO8/yBui8L14zKQ/s860/399618_406232742765079_434225307_n.jpg">      
 </div>
-
 
