--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,11 @@
 .home {
   list-style: none;
   text-align: center;
-  margin-top: 100px;
-  margin-right: 75px;
-  margin-left: 75px;
+  margin: auto;
+}
+
+.row {
+  text-align: center;
 }
 
 li {
@@ -11,25 +13,22 @@ li {
 }
 
 tbody:nth-child(even) {
-  background-color: #696969;
+  background-color: #FFFF55;
 }
 
 .table-hover tbody tr:hover > td,
 .table-hover tbody tr:hover > th {
-  background-color: black;
+  background-color: #696969;
 }
 
 body {
-  background-image: url("https://lh4.googleusercontent.com/-_loai1Qr6Yk/UV5fSU6QIjI/AAAAAAAAAOs/bpZBGjaqzcs/s860/bamboo+1920x1200-6.jpg");
+  background-color: #00FA9A;
+  /*background-image: url("https://lh4.googleusercontent.com/-_loai1Qr6Yk/UV5fSU6QIjI/AAAAAAAAAOs/bpZBGjaqzcs/s860/bamboo+1920x1200-6.jpg");
   background-size: cover;
   background-repeat: repeat;
-  height: 100%;
+  height: 100%;*/
 }
 
-table {
-  text-align: center;
-  color: white;
-}
 
 .description {
   color: white;
@@ -39,6 +38,10 @@ table {
 
 table {
   font-family: 'Nunito', sans-serif;
+  border: 6px solid white;
+  text-align: center;
+  color: white;
+  border-radius: 3px;
 }
 
 .api {
@@ -61,6 +64,24 @@ h1 {
   font-family: 'Nunito', sans-serif;
 }
 
+.homeusers {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-size: 30px;
+  margin-right: 30px;
+  margin-top: 25px;
+}
+
+
+.homeproducts {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-size: 30px;
+  margin-left: 30px;
+  margin-top: 25px;
+}
+
+
 .complete {
   color: white;
   font-family: 'Nunito', sans-serif;
@@ -77,9 +98,13 @@ form {
   font-family: 'Nunito', sans-serif;
 }
 
+.nav {
+  font-family: 'Nunito', sans-serif;
+}
+
 a {
-color: white;
-text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .panda {
@@ -92,6 +117,8 @@ text-decoration: none;
   font-size: 80px;
   line-height: 90%;
   margin-top: 40px;
+  margin-bottom: 40px;
   text-align: center;
   color: white;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Lobster', cursive;
+}
