--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <title>Panda Outpost</title>
   </head>
   <body>
